@@ -1,3 +1,5 @@
+    - External file type manager now removes "." prefix in file type extension if the user
+      has typed it that way.
     - Preview panel now defaults to preview layout 1 instead of 2. Switched default layouts.
     - Added IfPlural formatter by Russell Almond. The formatter outputs its first argument
       if the input field contains " and " and the second one otherwise.
